--- a/PWCat/src/index.html
+++ b/PWCat/src/index.html
@@ -7,8 +7,47 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="theme-color" content="#673ab7">
+  <link rel="manifest" href="manifest.json">
+  <style>
+body { margin-top: 100px; background-color: #137b85; color: #fff; text-align:center; }
+
+h1 {
+  font: 2em 'Roboto', sans-serif;
+  margin-bottom: 40px;
+}
+
+#loading {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  border: 3px solid rgba(255,255,255,.3);
+  border-radius: 50%;
+  border-top-color: #fff;
+  animation: spin 1s ease-in-out infinite;
+  -webkit-animation: spin 1s ease-in-out infinite;
+}
+
+@keyframes spin {
+  to { -webkit-transform: rotate(360deg); }
+}
+@-webkit-keyframes spin {
+  to { -webkit-transform: rotate(360deg); }
+}
+  </style>
+  <noscript>
+      <h3 style="color: #673ab7; font-family: Helvetica; margin: 2rem;">
+          Sorry, but app is not available without javascript
+      </h3>
+  </noscript>
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+      <nav 
+      style="background-color: #673ab7; height: 56px; width: 100%">
+    </nav>
+      <h1>Loading...</h1>
+      <div id="loading"></div>
+  </app-root>
 </body>
 </html>
